mdapipkg/objects/Skillsets_Expertise__c.object
<CustomObject>
    <description>This object tracks all the expertise for a given M2MX Category &amp; Sub Category</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adolescents and Children</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>FINANCE</fullName>
                </value>
                <value>
                    <fullName>Global Issues</fullName>
                </value>
                <value>
                    <fullName>Government Agencies</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>Legal: Business</fullName>
                </value>
                <value>
                    <fullName>Legal: Personal</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Manufacturing and Distribution</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Presidents&apos; Action Net - Social Enterprise</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Regional Topics</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Addiction</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Aircraft Type</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Australia and the South Pacific</fullName>
                </value>
                <value>
                    <fullName>Auto Immune Disease</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Blood Disorder</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Business Planning</fullName>
                </value>
                <value>
                    <fullName>Camp</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiac</fullName>
                </value>
                <value>
                    <fullName>Child Birth</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Corporate Development</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Treatment</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Criminal Activity</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>M2MX Skillsets Expertise</label>
    <listViews>
        <fullName>M2MXE</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Expertise__c</columns>
        <columns>GUID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>M2MXE</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>M2MX Expertise-{0000}</displayFormat>
        <label>M2MX Skillsets Expertise Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>M2MX Skillsets Expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>